# Rayfun

./: .gitignore  CMakeLists.txt  README.md
extlibs/ZipLib/: CMakeLists.txt  ZipArchiveEntry.cpp  ZipArchiveEntry.h  ZipFile.cpp  ZipFile.h
extlibs/ZipLib/methods/: ZipMethodResolver.h
extlibs/imgui/: CMakeLists.txt  imconfig.h  imgui-SFML.cpp  imgui.cpp  imgui.h  imgui_draw.cpp
include/: actor.hpp  animatedbillboard.hpp  application.hpp  application_error.hpp  billboard.hpp  camera.hpp  chaiinterfaceloader.hpp  common.hpp  constants.hpp  drawableactor.hpp  gameplayglobals.hpp  gamestate.hpp  glutils.hpp  graphicsutility.hpp  imgui-wrapper.hpp  level.hpp  lightsource.hpp  logger.hpp  map.hpp  mathutility.hpp  mathutility.tpp  pakcontents.hpp  pakreader.hpp  parameters.hpp  player.hpp  raycasting.hpp  screenmelt.hpp  sector.hpp  shaderrendersurface.hpp  state.hpp  statefactory.hpp  stateid.hpp  statemachine.hpp  taggable.hpp  texturecontainer.hpp  tile.hpp  trigger.hpp  utility.hpp  weapon.hpp  weaponstructure.hpp
include/SelbaWard/: ConsoleScreen.hpp  Ring.hpp  TileMap.hpp  TileMap.inl
include/animations/: moveanimation.hpp
include/cmake/: config.hpp  config.hpp.in
include/hud/: console.hpp  hud.hpp  minimap.hpp  spinningmedal.hpp  textcursor.hpp
include/loaders/: bindingreader.hpp  configreader.hpp  pakreader.hpp  pakreader.tpp
include/states/: gamestate.hpp  introstate.hpp  menustate.hpp
include/utils/: glslinterop.hpp  graphicsutility.hpp  utility.hpp
src/: actor.cpp  animatedbillboard.cpp  application.cpp  billboard.cpp  camera.cpp  chaiinterfaceloader.cpp  consolecommands.cpp  drawableactor.cpp  gameplayglobals.cpp  gamestate.cpp  gamestate_chaidef.cpp  graphicsutility.cpp  lightsource.cpp  logger.cpp  main.cpp  map.cpp  pakreader.cpp  player.cpp  raycasting.cpp  screenmelt.cpp  shaderrendersurface.cpp  state.cpp  statemachine.cpp  texturecontainer.cpp  weapon.cpp
src/SelbaWard/: BitmapFont.cpp  BitmapText.cpp  ConsoleScreen.cpp  ConsoleScreenOld.cpp  Crosshair.cpp  GallerySprite.cpp  Line.cpp  NinePatch.cpp  PieChart.cpp  ProgressBar.cpp  Ring.cpp  SpinningCard.cpp  Spline.cpp  Sprite3d.cpp  Starfield.cpp  TileMap.cpp
src/animations/: moveanimation.cpp
src/hud/: console.cpp  hud.cpp  minimap.cpp  spinningmedal.cpp  textcursor.cpp
src/loaders/: bindingreader.cpp  configreader.cpp  pakreader.cpp
src/states/: gamestate.cpp  introstate.cpp  menustate.cpp
src/utils/: gameplayglobals.cpp  glslinterop.cpp  graphicsutility.cpp
